--- a/stu01/src/main/resources/static/nav.html
+++ b/stu01/src/main/resources/static/nav.html
@@ -2,14 +2,21 @@
 <html>
 
 <head>
-    <meta http-equiv="content-type" content="text/html; charset=utf-8">
+    <meta http-equiv="content-type" content="text/html;charset=utf-8">
     <meta name="viewport" content="width=device-width,initial-scale=1,maximum-scale=1,user-scalable=no">
-    <title>赏心悦目的侧边导航栏</title>
+    <title>主页</title>
     <style>
         * {
             margin: 0;
             padding: 0;
+            box-sizing: border-box;
         }
+        
+        iframe {
+			border: none;
+			width: 100%;
+			height: 99%;
+			}
 
         body {
             height: 100vh;
@@ -33,6 +40,14 @@
             /* 淡蓝色侧边栏 */
             border-radius: 20px 20px 20px 0px;
         }
+        
+        .main{
+        	background-color: #e0ffff;
+        	border:solid 1px #ff0000;
+        	width:calc(100% - 300px);
+        	margin-left: 310px;
+        	height: 100%;
+        }
 
         .menus {
             margin: 50px 0;
@@ -44,7 +59,7 @@
             font-size: 17px;
             font-weight: 400;
             padding: 8px 12px;
-            box-sizing: border-box;
+
             transition: 0.3s;
         }
 
@@ -84,13 +99,34 @@
             /* 更深一点的蓝色 */
         }
     </style>
+	
+	<script>
+	function insertUser(){
+		let xhr=new XMLHttpRequest();
+		xhr.open('POST','/users/insert',true);
+		xhr.setRequestHeader('Content-Type','application/json');
+		xhr.send(JSON.stringify({id:"1008",name:"xxx",password:"100",number:"100"}));
+		xhr.addEventListener('load',(e)=>{
+			console.log('load:',xhr);}
+		);
+		xhr.addEventListener('error',(e)=>{console.log('error:',e.currentTarget.response);})
+	}
+	
+	function registerEvents(event){
+		document.getElementById("qq1").addEventListener('click',insertUser);
+		document.getElementById('main').src='soap.html';
+		console.log(document.getElementById('main'));
+	}
+	
+	window.addEventListener('load',(event)=>registerEvents(event));
+	</script>
 </head>
 
-<body>
+<body id='body'>
     <nav>
         <ul class="menus">
             <li class="li"> QQ <ul>
-                    <li>QQ1号</li>
+                    <li id="qq1">QQ1号</li>
                     <li>QQ2号</li>
                     <li>QQ3号</li>
                     <li>QQ4号</li>
@@ -137,6 +173,9 @@
             </li>
         </ul>
     </nav>
+	<div class="main">
+            <iframe id="main"></iframe>
+    </div>
 </body>
 
 </html>
